deploy/resources/develop/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Ingress controller
    # Ref: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "60"

    # Configure sticky session. Keycloak is configured in cluster mode, but sticky sessions at ingress level avoid
    # a lot of useless queries between nodes, improving the performance
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: INGRESS_ROUTE
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"

    # Cert Manager
    cert-manager.io/cluster-issuer: letsencrypt-staging

    # ExternalDNS
    # Ref: https://pkg.go.dev/time#ParseDuration
    external-dns.alpha.kubernetes.io/ttl: "1m"
  name: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: &host keycloak.infrastructure.dev.s73cloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: keycloak-tls
